fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 a {
   color: #fff !important;
 }
